--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     }
   ],
   "require": {
-    "php": "~7.1",
-    "illuminate/support": "^5.4",
+    "php": ">=7.1",
+    "illuminate/support": ">=5.4",
     "nesbot/carbon": ">=1.0",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": ">=6.3"
   },
   "autoload": {
     "psr-4": {
